advanced/configuration/coom/parser/ModelParser.py
# Generated from Model.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ModelParser(Parser):

    grammarFileName = "Model.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>", "'product'", "'{'", "'}'", "'structure'", "'enumeration'",
        "'behavior'", "'reference'", "'/'", "'..'", "'*'", "'attribute'",
        "'='", "'('", "','", "')'", "'num'", "'-'", "'string'", "'/n'",
        "'define'", "'combinations'", "'explanation'", "'forall'", "'exists'",
        "'condition'", "'valid'", "'start'", "'end'", "'default'", "'imply'",
        "'new'", "'readwrite'", "'readonly'", "'hide'", "'message'", "'debug'",
        "'info'", "'warn'", "'error'", "'explain'", "'require'", "'prefer'",
        "'allow'", "'forbid'", "'-*-'", "';'", "'\u221E'", "'<'", "'<='",
        "'\u2264'", "'>'", "'>='", "'\u2265'", "'=='", "'!='", "'\u2260'",
        "'\u2287'", "'contains'", "'.'", "'^'", "'['", "']'", "'last'", "'||'",
        "'&&'", "'!'", "'+'", "'true'", "'false'"
    ]

    symbolicNames = [
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
        "FUNCTION", "KEYWORD", "NAME", "INTEGER", "FLOATING", "TIMES",
        "HASHES", "NEWLINE", "WHITESPACE", "COMMENT", "MULTILINE_COMMENT"
    ]

    RULE_root = 0
    RULE_product = 1
    RULE_structure = 2
    RULE_enumeration = 3
    RULE_behavior = 4
    RULE_behavior_block = 5
    RULE_feature = 6
    RULE_cardinality = 7
    RULE_attribute = 8
    RULE_option = 9
    RULE_field = 10
    RULE_number_def = 11
    RULE_string_def = 12
    RULE_define = 13
    RULE_conditioned = 14
    RULE_combinations = 15
    RULE_explanation = 16
    RULE_index_quantification = 17
    RULE_precondition = 18
    RULE_assign_default = 19
    RULE_assign_imply = 20
    RULE_assign_new = 21
    RULE_interaction = 22
    RULE_message = 23
    RULE_require = 24
    RULE_prefer = 25
    RULE_combination_row = 26
    RULE_combination_item = 27
    RULE_combination_atom = 28
    RULE_stmt_end = 29
    RULE_constant = 30
    RULE_floating = 31
    RULE_compare = 32
    RULE_unit = 33
    RULE_fraction = 34
    RULE_path = 35
    RULE_path_item = 36
    RULE_path_index = 37
    RULE_condition = 38
    RULE_condition_or = 39
    RULE_condition_and = 40
    RULE_condition_not = 41
    RULE_condition_compare = 42
    RULE_condition_part = 43
    RULE_formula = 44
    RULE_formula_add = 45
    RULE_formula_sub = 46
    RULE_formula_mul = 47
    RULE_formula_div = 48
    RULE_formula_pow = 49
    RULE_formula_sign = 50
    RULE_formula_func = 51
    RULE_formula_atom = 52
    RULE_name = 53
    RULE_date = 54

    ruleNames = [
        "root", "product", "structure", "enumeration", "behavior",
        "behavior_block", "feature", "cardinality", "attribute", "option",
        "field", "number_def", "string_def", "define", "conditioned",
        "combinations", "explanation", "index_quantification", "precondition",
        "assign_default", "assign_imply", "assign_new", "interaction",
        "message", "require", "prefer", "combination_row", "combination_item",
        "combination_atom", "stmt_end", "constant", "floating", "compare",
        "unit", "fraction", "path", "path_item", "path_index", "condition",
        "condition_or", "condition_and", "condition_not", "condition_compare",
        "condition_part", "formula", "formula_add", "formula_sub",
        "formula_mul", "formula_div", "formula_pow", "formula_sign",
        "formula_func", "formula_atom", "name", "date"
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    T__36 = 37
    T__37 = 38
    T__38 = 39
    T__39 = 40
    T__40 = 41
    T__41 = 42
    T__42 = 43
    T__43 = 44
    T__44 = 45
    T__45 = 46
    T__46 = 47
    T__47 = 48
    T__48 = 49
    T__49 = 50
    T__50 = 51
    T__51 = 52
    T__52 = 53
    T__53 = 54
    T__54 = 55
    T__55 = 56
    T__56 = 57
    T__57 = 58
    T__58 = 59
    T__59 = 60
    T__60 = 61
    T__61 = 62
    T__62 = 63
    T__63 = 64
    T__64 = 65
    T__65 = 66
    T__66 = 67
    T__67 = 68
    T__68 = 69
    FUNCTION = 70
    KEYWORD = 71
    NAME = 72
    INTEGER = 73
    FLOATING = 74
    TIMES = 75
    HASHES = 76
    NEWLINE = 77
    WHITESPACE = 78
    COMMENT = 79
    MULTILINE_COMMENT = 80

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA,
                                          self.sharedContextCache)
        self._predicates = None

    def wasNewline(self):
        for index in reversed(range(self.getCurrentToken().tokenIndex)):
            # stop on default channel
            token = self.getTokenStream().get(index)
            if token.channel == 0:
                break

            # if the token is blank and contains newline, we found it
            if len(token.text) == 0:
                continue
            if token.text.startswith("\n") or token.text.startswith("\r"):
                return True

        return False

    class RootContext(ParserRuleContext):

        def __init__(self,
                     parser,
                     parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ModelParser.EOF, 0)

        def product(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.ProductContext)
            else:
                return self.getTypedRuleContext(ModelParser.ProductContext, i)

        def structure(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.StructureContext)
            else:
                return self.getTypedRuleContext(ModelParser.StructureContext,
                                                i)

        def enumeration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ModelParser.EnumerationContext)
            else:
                return self.getTypedRuleContext(ModelParser.EnumerationContext,
                                                i)

        def behavior(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.BehaviorContext)
            else:
                return self.getTypedRuleContext(ModelParser.BehaviorContext, i)

        def getRuleIndex(self):
            return ModelParser.RULE_root

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRoot"):
                listener.enterRoot(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRoot"):
                listener.exitRoot(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRoot"):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)

    def root(self):

        localctx = ModelParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and
                   ((1 << _la) &
                    ((1 << ModelParser.T__0) | (1 << ModelParser.T__3) |
                     (1 << ModelParser.T__4) | (1 << ModelParser.T__5))) != 0):
                self.state = 114
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ModelParser.T__0]:
                    self.state = 110
                    self.product()
                    pass
                elif token in [ModelParser.T__3]:
                    self.state = 111
                    self.structure()
                    pass
                elif token in [ModelParser.T__4]:
                    self.state = 112
                    self.enumeration()
                    pass
                elif token in [ModelParser.T__5]:
                    self.state = 113
                    self.behavior()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(ModelParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ProductContext(ParserRuleContext):

        def __init__(self,
                     parser,
                     parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.FeatureContext)
            else:
                return self.getTypedRuleContext(ModelParser.FeatureContext, i)

        def stmt_end(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.Stmt_endContext)
            else:
                return self.getTypedRuleContext(ModelParser.Stmt_endContext, i)

        def getRuleIndex(self):
            return ModelParser.RULE_product

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProduct"):
                listener.enterProduct(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProduct"):
                listener.exitProduct(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProduct"):
                return visitor.visitProduct(self)
            else:
                return visitor.visitChildren(self)

    def product(self):

        localctx = ModelParser.ProductContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_product)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(ModelParser.T__0)
            self.state = 122
            self.match(ModelParser.T__1)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and
                ((1 << _la) &
                 ((1 << ModelParser.T__6) | (1 << ModelParser.T__15) |
                  (1 << ModelParser.T__17))) != 0) or (
                      (((_la - 70)) & ~0x3f) == 0 and
                      ((1 <<
                        (_la - 70)) & ((1 << (ModelParser.FUNCTION - 70)) |
                                       (1 << (ModelParser.KEYWORD - 70)) |
                                       (1 << (ModelParser.NAME - 70)) |
                                       (1 << (ModelParser.INTEGER - 70)) |
                                       (1 << (ModelParser.TIMES - 70)))) != 0):
                self.state = 123
                self.feature()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and
                       ((1 << _la) &
                        ((1 << ModelParser.T__6) | (1 << ModelParser.T__15) |
                         (1 << ModelParser.T__17) |
                         (1 << ModelParser.T__45))) != 0) or (
                             (((_la - 70)) & ~0x3f) == 0 and
                             ((1 << (_la - 70)) &
                              ((1 << (ModelParser.FUNCTION - 70)) |
                               (1 << (ModelParser.KEYWORD - 70)) |
                               (1 << (ModelParser.NAME - 70)) |
                               (1 << (ModelParser.INTEGER - 70)) |
                               (1 << (ModelParser.TIMES - 70)))) != 0):
                    self.state = 124
                    self.stmt_end()
                    self.state = 125
                    self.feature()
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.state = 134
            self.match(ModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructureContext(ParserRuleContext):

        def __init__(self,
                     parser,
                     parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ModelParser.NameContext, 0)

        def feature(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.FeatureContext)
            else:
                return self.getTypedRuleContext(ModelParser.FeatureContext, i)

        def stmt_end(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.Stmt_endContext)
            else:
                return self.getTypedRuleContext(ModelParser.Stmt_endContext, i)

        def getRuleIndex(self):
            return ModelParser.RULE_structure

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStructure"):
                listener.enterStructure(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStructure"):
                listener.exitStructure(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStructure"):
                return visitor.visitStructure(self)
            else:
                return visitor.visitChildren(self)

    def structure(self):

        localctx = ModelParser.StructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structure)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(ModelParser.T__3)
            self.state = 137
            self.name()
            self.state = 138
            self.match(ModelParser.T__1)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and
                ((1 << _la) &
                 ((1 << ModelParser.T__6) | (1 << ModelParser.T__15) |
                  (1 << ModelParser.T__17))) != 0) or (
                      (((_la - 70)) & ~0x3f) == 0 and
                      ((1 <<
                        (_la - 70)) & ((1 << (ModelParser.FUNCTION - 70)) |
                                       (1 << (ModelParser.KEYWORD - 70)) |
                                       (1 << (ModelParser.NAME - 70)) |
                                       (1 << (ModelParser.INTEGER - 70)) |
                                       (1 << (ModelParser.TIMES - 70)))) != 0):
                self.state = 139
                self.feature()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and
                       ((1 << _la) &
                        ((1 << ModelParser.T__6) | (1 << ModelParser.T__15) |
                         (1 << ModelParser.T__17) |
                         (1 << ModelParser.T__45))) != 0) or (
                             (((_la - 70)) & ~0x3f) == 0 and
                             ((1 << (_la - 70)) &
                              ((1 << (ModelParser.FUNCTION - 70)) |
                               (1 << (ModelParser.KEYWORD - 70)) |
                               (1 << (ModelParser.NAME - 70)) |
                               (1 << (ModelParser.INTEGER - 70)) |
                               (1 << (ModelParser.TIMES - 70)))) != 0):
                    self.state = 140
                    self.stmt_end()
                    self.state = 141
                    self.feature()
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.state = 150
            self.match(ModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumerationContext(ParserRuleContext):

        def __init__(self,
                     parser,
                     parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(ModelParser.NameContext, 0)

        def attribute(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.AttributeContext)
            else:
                return self.getTypedRuleContext(ModelParser.AttributeContext,
                                                i)

        def option(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.OptionContext)
            else:
                return self.getTypedRuleContext(ModelParser.OptionContext, i)

        def stmt_end(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.Stmt_endContext)
            else:
                return self.getTypedRuleContext(ModelParser.Stmt_endContext, i)

        def getRuleIndex(self):
            return ModelParser.RULE_enumeration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterEnumeration"):
                listener.enterEnumeration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitEnumeration"):
                listener.exitEnumeration(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEnumeration"):
                return visitor.visitEnumeration(self)
            else:
                return visitor.visitChildren(self)

    def enumeration(self):

        localctx = ModelParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_enumeration)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(ModelParser.T__4)
            self.state = 153
            self.name()
            self.state = 154
            self.match(ModelParser.T__1)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 11)) & ~0x3f) == 0
                    and ((1 <<
                          (_la - 11)) & ((1 << (ModelParser.T__10 - 11)) |
                                         (1 << (ModelParser.FUNCTION - 11)) |
                                         (1 << (ModelParser.KEYWORD - 11)) |
                                         (1 <<
                                          (ModelParser.NAME - 11)))) != 0):
                self.state = 157
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [ModelParser.T__10]:
                    self.state = 155
                    self.attribute()
                    pass
                elif token in [
                        ModelParser.FUNCTION, ModelParser.KEYWORD,
                        ModelParser.NAME
                ]:
                    self.state = 156
                    self.option()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while ((((_la - 11)) & ~0x3f) == 0
                       and ((1 <<
                             (_la - 11)) & ((1 << (ModelParser.T__10 - 11)) |
                                            (1 << (ModelParser.T__45 - 11)) |
                                            (1 <<
                                             (ModelParser.FUNCTION - 11)) |
                                            (1 << (ModelParser.KEYWORD - 11)) |
                                            (1 <<
                                             (ModelParser.NAME - 11)))) != 0):
                    self.state = 159
                    self.stmt_end()
                    self.state = 162
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [ModelParser.T__10]:
                        self.state = 160
                        self.attribute()
                        pass
                    elif token in [
                            ModelParser.FUNCTION, ModelParser.KEYWORD,
                            ModelParser.NAME
                    ]:
                        self.state = 161
                        self.option()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

            self.state = 171
            self.match(ModelParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BehaviorContext(ParserRuleContext):

        def __init__(self,
                     parser,
                     parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def behavior_block(self):
            return self.getTypedRuleContext(ModelParser.Behavior_blockContext,
                                            0)

        def name(self):
            return self.getTypedRuleContext(ModelParser.NameContext, 0)

        def getRuleIndex(self):
            return ModelParser.RULE_behavior

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBehavior"):
                listener.enterBehavior(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBehavior"):
                listener.exitBehavior(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBehavior"):
                return visitor.visitBehavior(self)
            else:
                return visitor.visitChildren(self)

    def behavior(self):

        localctx = ModelParser.BehaviorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_behavior)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self.match(ModelParser.T__5)
            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 70)) & ~0x3f) == 0
                    and ((1 <<
                          (_la - 70)) & ((1 << (ModelParser.FUNCTION - 70)) |
                                         (1 << (ModelParser.KEYWORD - 70)) |
                                         (1 <<
                                          (ModelParser.NAME - 70)))) != 0):
                self.state = 174
                self.name()

            self.state = 177
            self.behavior_block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Behavior_blockContext(ParserRuleContext):

        def __init__(self,
                     parser,
                     parent: ParserRuleContext = None,
                     invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def define(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.DefineContext)
            else:
                return self.getTypedRuleContext(ModelParser.DefineContext, i)

        def stmt_end(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.Stmt_endContext)
            else:
                return self.getTypedRuleContext(ModelParser.Stmt_endContext, i)

        def message(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ModelParser.MessageContext)
            else:
                return self.getTypedRuleContext(ModelParser.MessageContext, i)

        def conditioned(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ModelParser.ConditionedContext)
            else:
                return self.getTypedRuleContext(ModelParser.ConditionedContext,
                                                i)

        def getRuleIndex(self):
            return ModelParser.RULE_behavior_block

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterBehavior_block"):
                listener.enterBehavior_block(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitBehavior_block"):
                listener.exitBehavior_block(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBehavior_block"):
                return visitor.visitBehavior_block(self)
            else:
                return visitor.visitChildren(self)

    def behavior_block(self):

        localctx = ModelParser.Behavior_blockContext(self, self._ctx,
                                                     self.state)
        self.enterRule(localctx, 10, self.RULE_behavior_block)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(ModelParser.T__1)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == ModelParser.T__19:
                self.state = 180
                self.define()
                self.state = 181
                self.stmt_end()
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 197
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 13, self._ctx)
            if la_ == 1:
                self.state = 188
                self.message()
                self.state = 194
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 12, self._ctx)
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 189
                        self.stmt_end()
                        self.state = 190
                        self.message()
                    self.state = 196
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(
                        self._input, 12, self._ctx)

            self.state = 208
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0
                    and ((1 << _la) &
                         ((1 << ModelParser.T__1) | (1 << ModelParser.T__20) |
                          (1 << ModelParser.T__21) | (1 << ModelParser.T__22) |
                          (1 << ModelParser.T__23) | (1 << ModelParser.T__24) |
                          (1 << ModelParser.T__25) | (1 << ModelParser.T__28) |
                          (1 << ModelParser.T__29) | (1 << ModelParser.T__30) |
                          (1 << ModelParser.T__31) | (1 << ModelParser.T__32) |
                          (1 << ModelParser.T__33) | (1 << ModelParser.T__40) |
                          (1 << ModelParser.T__41))) != 0):
                self.state = 199
                self.conditioned()
                self.state = 205
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and
                       ((1 << _la) &
                        ((1 << ModelParser.T__1) | (1 << ModelParser.T__20) |
                         (1 << ModelParser.T__21) | (1 << ModelParser.T__22) |
                         (1 << ModelParser.T__23) | (1 << ModelParser.T__24) |
                         (1 << ModelParser.T__25) | (1 << ModelParser.T__28) |
                         (1 << ModelParser.T__29) | (1 << ModelParser.T__30) |
                         (1 << ModelParser.T__31) | (1 << ModelParser.T__32) |
                         (1 << ModelParser.T__33) | (1 << ModelParser.T__40) |
                         (1 << ModelParser.T__41) |
                         (1 << ModelParser.T__45))) != 0):
                    self.state = 200
                    self.stmt_end()
                    self.state = 201
                    self.conditioned()
                    self.state = 207
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
